fixed catalogue items to start so there is no awkward stretching at last line

--- a/src/catalogue/catalogue.css
+++ b/src/catalogue/catalogue.css
@@ -1,7 +1,7 @@
 .plantsCatalogue {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: start;
   gap: 1rem;
 
   width: 60%;
